<resources>
    <string name="app_name">healthybee</string>

    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="email_id">Email id</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_your_mobile_number_to_get_otp">Enter your mobile number to get OTP</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="resend_otp">Resend OTP ?</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="sign_in">SIGN IN</string>
    <string name="otp">OTP</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="todo">TODO</string>
    <string name="enter_email">Enter email</string>
    <string name="mobile_no">Mobile No</string>
</resources>
