<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg_login"
              android:gravity="bottom|center"
              android:orientation="vertical">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/welcome"
                    android:textColor="@android:color/white"
                    android:textSize="40sp"
                    android:textStyle="normal" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sign_in_to_continue"
                    android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/edt_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_bg_transparent"
                    android:gravity="center"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:visibility="visible" />


            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/edt_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_bg_transparent"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textWebPassword"
                    android:maxLength="15"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_bg_transparent"
                    android:digits="0123456789"
                    android:gravity="center"
                    android:hint="@string/mobile_no"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_bg_transparent"
                    android:digits="0123456789"
                    android:gravity="center"
                    android:hint="@string/otp"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:visibility="gone" />


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dip"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                <TextView
                        android:id="@+id/tv_forgot_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/forgot_password"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:visibility="visible" />

                <TextView
                        android:id="@+id/tv_resend_otp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/resend_otp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:visibility="gone" />

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                    <Button
                            android:id="@+id/bt_password"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_shap_left_round"
                            android:text="@string/password"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimaryDark"
                            tools:ignore="ButtonStyle,NestedWeights" />

                    <Button
                            android:id="@+id/bt_otp"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            tools:ignore="ButtonStyle"
                            android:layout_weight="1"
                            android:background="@drawable/button_shap_right_round"
                            android:text="@string/otp"
                            android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>

            <Button
                    android:id="@+id/btn_generate_otp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/generate_otp"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:visibility="gone" />

            <Button
                    android:id="@+id/btn_login"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/sign_in"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                <View
                        android:layout_width="60dp"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toStartOf="@+id/or"
                        android:layout_toLeftOf="@+id/or"
                        android:background="#c0c0c0"
                        tools:ignore="RtlHardcoded" />

                <TextView
                        android:id="@+id/or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/or"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                <View
                        android:layout_width="60dp"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_toEndOf="@+id/or"
                        android:layout_toRightOf="@+id/or"
                        android:background="#c0c0c0"
                        tools:ignore="RtlHardcoded" />
            </RelativeLayout>


            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/iv_fb"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_fb"
                        tools:ignore="RtlHardcoded" />

                <ImageView
                        android:id="@+id/iv_google"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_g"
                        tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <TextView
                    android:id="@+id/tv_newUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/don_t_have_an_account_sign_up"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
